<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>eu.cloudbutton</groupId>
	<artifactId>utslambda</artifactId>
	<version>1.0</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>

		<skipTests>false</skipTests>

		<!--VERSIONS -->
		<grpc.version>1.25.0</grpc.version>
		<os.plugin.version>1.6.2</os.plugin.version>
		<protobuf.plugin.version>0.6.1</protobuf.plugin.version>
		<protoc.version>3.10.1</protoc.version>

		<version.testng>6.14.3</version.testng>

		<!--AWS CONFIG PROPERTIES -->
		<lambda.awsAccountId>12345678901</lambda.awsAccountId>
		<lambda.roleName>role-name</lambda.roleName>
		<lambda.functionName>function-name</lambda.functionName>
		<lambda.timeout>120</lambda.timeout>
		<lambda.memorySize>1792</lambda.memorySize>
		<lambda.functionNameSuffix>-utslambda</lambda.functionNameSuffix>
		<!-- <lambda.s3Bucket>jwren</lambda.s3Bucket> <lambda.region>us-east-1</lambda.region> -->
		<lambda.s3Bucket>bucket-name</lambda.s3Bucket>
		<lambda.region>eu-west-1</lambda.region>

		<lambda.roleArn>
			arn:aws:iam::${lambda.awsAccountId}:role/${lambda.roleName}
		</lambda.roleArn>
		<lambda.functionCode>
			${project.build.directory}/${project.build.finalName}.jar
		</lambda.functionCode>
		<lambda.version>${project.version}</lambda.version>
		<lambda.publish>true</lambda.publish>
		<lambda.forceUpdate>true</lambda.forceUpdate>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.jfree</groupId>
			<artifactId>jfreechart</artifactId>
			<version>1.5.0</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api -->
		<dependency>
			<groupId>javax.annotation</groupId>
			<artifactId>javax.annotation-api</artifactId>
			<version>1.3.2</version>
			<scope>compile</scope>
		</dependency>

		<!--AWS LAMBDA -->
		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-lambda-java-core</artifactId>
			<version>1.2.0</version>
		</dependency>
		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-java-sdk-lambda</artifactId>
			<version>1.11.729</version>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.5</version>
		</dependency>

		<!-- LOGS -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.12.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.12.1</version>
		</dependency>

		<!-- TEST -->
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>${version.testng}</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<extensions>
			<extension>
				<groupId>kr.motd.maven</groupId>
				<artifactId>os-maven-plugin</artifactId>
			</extension>
		</extensions>
		<plugins>
			<plugin>
				<groupId>kr.motd.maven</groupId>
				<artifactId>os-maven-plugin</artifactId>
				<version>${os.plugin.version}</version>
			</plugin>

			<!-- Required for @Contended annotation -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<compilerArgs>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.vm.annotation=ALL-UNNAMED</arg>
					</compilerArgs>
				</configuration>
			</plugin>


			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M3</version>
				<configuration>
					<skipTests>${skipTests}</skipTests>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.1</version>
				<configuration>
					<createDependencyReducedPom>false
					</createDependencyReducedPom>
					<transformers>
						<transformer
							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
							<mainClass>foo.bar.Generate</mainClass>
							<manifestEntries>
								<Multi-Release>true</Multi-Release>
							</manifestEntries>
						</transformer>
						<transformer
							implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
					</transformers>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>


			<plugin>
				<groupId>com.github.seanroy</groupId>
				<artifactId>lambda-maven-plugin</artifactId>
				<version>2.3.3</version>
				<dependencies>
					<!-- things that got killed after java 9 -->
					<dependency>
						<groupId>javax.xml.bind</groupId>
						<artifactId>jaxb-api</artifactId>
						<version>2.2.7</version>
						<scope>compile</scope>
					</dependency>
					<dependency>
						<groupId>com.sun.xml.bind</groupId>
						<artifactId>jaxb-core</artifactId>
						<version>2.2.7</version>
						<scope>compile</scope>
					</dependency>
					<dependency>
						<groupId>com.sun.xml.bind</groupId>
						<artifactId>jaxb-impl</artifactId>
						<version>2.2.7</version>
						<scope>compile</scope>
					</dependency>
					<dependency>
						<groupId>javax.activation</groupId>
						<artifactId>activation</artifactId>
						<version>1.1</version>
						<scope>compile</scope>
					</dependency>
				</dependencies>
				<configuration>
					<region>${lambda.region}</region>
					<functionCode>${lambda.functionCode}</functionCode>
					<version>${lambda.version}</version>
					<runtime>java11</runtime>
					<lambdaRoleArn>${lambda.roleArn}</lambdaRoleArn>
					<s3Bucket>${lambda.s3Bucket}</s3Bucket>
					<keyPrefix>crucial-jars</keyPrefix>
					<publish>${lambda.publish}</publish>
					<forceUpdate>${lambda.forceUpdate}</forceUpdate>
					<functionNameSuffix>${lambda.functionNameSuffix}
					</functionNameSuffix>
					<lambdaFunctionsJSON>
						[
						{
						"functionName": "${lambda.functionName}",
						"description": "CloudThread Handler for Unbalanced Tree Search",
						"handler": "crucial.execution.aws.AWSLambdaHandler",
						"timeout":
						${lambda.timeout},
						"memorySize": ${lambda.memorySize}
						}
						]
					</lambdaFunctionsJSON>
				</configuration>
			</plugin>

		</plugins>
	</build>

</project>
